fix spacing for .badge, .pull-right +

--- a/src/app/styles/spacing.scss
+++ b/src/app/styles/spacing.scss
@@ -9,6 +9,12 @@ div, h4, h3 {
 
   }
 
+  .badge, .pull-right {
+    & + span, & + a {
+      margin-left: 0;
+    }
+  }
+
   * + label {
     //margin-left: 2px;
   }
